2005-01-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocEntrySet.cxx : Bug fix when getting the value
   * src/gdcmContentEntry.[h|cxx], gdcmValEntry.cxx : amelioration of code

2005-01-25 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   In ordrer to avoid missbehaviour :
   . gdcm::DocEntry is now specialized in
     - gdcm::SeqEntry (Dicom Sequence) as opposed to :
     - gdcm::ContentEntry (Dicom entry with a 'content')
   . gdcm::ContentEntry is specialized in
     - gdcm::ValEntry (Dicom entry with a std::string representable value, i.e.
       characters value, or integers)
     - gdcm::BinEntry (Dicom entry with a non strig representable value
   (user hasn't any longer to thing about the precedence of his dynamic_casts)

2005-01-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/VTKTest*.cxx : bug fix under linux

2005-01-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/ : rename some methods on Entry (SetXxx, InsertXxx) to have a better
     use with python. Some methods are moved from Document to ElementSet or
     DocEntrySet. The equivalent methods to ElementSet have been added to 
     SQItem and are virtual in DocEntrySet. Methods that may have the same code
     in SQItem and ElementSet is directly placed in DocEntrySet

2005-01-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/VTKTest*.cxx : remove the show variable in each test method because
     it's useless (the viewer variable replace this variable)

2005-01-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocument.cxx : bug fix on potential memory leak
   * src/gdcmSQItem.cxx : initialize the SQItemNumber value in the constructor
   * src/gdcmSQItem.[h|cxx], gdcmElementSet.[h|cxx], gdcmDicomDir*.[h|cxx] : 
     Add ClearXxx methods to remove all the content of the list or map
   * gdcmDocEntrySet.h : add GetFirst/NextEntry in pure virtual

2005-01-25 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>