@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmElementSet.h,v $
   Language:  C++
-  Date:      $Date: 2005/01/26 10:29:17 $
-  Version:   $Revision: 1.39 $
+  Date:      $Date: 2005/01/26 11:42:02 $
+  Version:   $Revision: 1.40 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -68,11 +68,9 @@ protected:
 private:
 // Variables
    /// Hash Table (map), to provide fast access
-   TagDocEntryHT TagHT; 
+   TagDocEntryHT TagHT;
    /// Hash Table (map) iterator, used to visit the TagHT variable
    TagDocEntryHT::iterator ItTagHT; 
-     
-   friend class DocEntryArchive; //For accessing private TagHT
 };
 } // end namespace gdcm
 //-----------------------------------------------------------------------------
