@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmRLEFramesInfo.h,v $
   Language:  C++
-  Date:      $Date: 2005/01/20 16:17:00 $
-  Version:   $Revision: 1.10 $
+  Date:      $Date: 2005/01/26 11:42:02 $
+  Version:   $Revision: 1.11 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -43,14 +43,17 @@ namespace gdcm
  */
 class GDCM_EXPORT RLEFramesInfo
 {
-   typedef std::list< RLEFrame* > RLEFrameList;
-friend class Document;
-friend class FileHelper;
-friend class PixelReadConvert;
-   RLEFrameList Frames;
 public:
    ~RLEFramesInfo();
    void Print( std::ostream &os = std::cout, std::string indent = "" );
+
+private:
+   typedef std::list< RLEFrame* > RLEFrameList;
+
+   RLEFrameList Frames;
+
+   friend class Document;
+   friend class PixelReadConvert;
 };
 } // end namespace gdcm
 
