@@ -1,3 +1,6 @@
+2005-01-26 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+   * FIX : remove so many friend between classes
+
 2005-01-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
    * src/gdcmDocEntrySet.cxx : Bug fix when getting the value
    * src/gdcmContentEntry.[h|cxx], gdcmValEntry.cxx : amelioration of code
